misc IDE-guided refactor/fix-up